| Summary: | ASTERISK-30021: ast_variable_list_replace_variable uses variable with new keyword | ||
| Reporter: | Jasper Hafkenscheid (jasper.hafkenscheid) | Labels: | |
| Date Opened: | 2022-04-19 08:12:33 | Date Closed: | 2022-04-25 16:30:02 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_vpb |
| Versions: | 18.11.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The newly introduced ast_variable_list_replace_variable method in config.c uses the C++ {{new}} keyword as an argument.
{noformat} int ast_variable_list_replace_variable(struct ast_variable **head, struct ast_variable *old, struct ast_variable *new); {noformat} This file is also included in C++ source, causing a compilation error such as: {noformat} In file included from /build/asterisk-18.11.2/include/asterisk/channel.h:178, from chan_vpb.cc:66: /build/asterisk-18.11.2/include/asterisk/config.h:985:23: error: expected ',' or '...' before 'new' struct ast_variable *new); ^~~ {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-04-19 08:12:33.885-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Benjamin Keith Ford (bford) 2022-04-19 09:32:17.665-0500 This is likely due to compiler used. Would you be interested in submitting a patch for this? Information on how to do so can be found [here|https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage]\[1\]. \[1\]: https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Friendly Automation (friendly-automation) 2022-04-25 16:30:03.633-0500 Change 18408 merged by Friendly Automation: config.h: Don't use C++ keywords as argument names. [https://gerrit.asterisk.org/c/asterisk/+/18408|https://gerrit.asterisk.org/c/asterisk/+/18408] By: Friendly Automation (friendly-automation) 2022-04-25 16:37:51.304-0500 Change 18399 merged by Friendly Automation: config.h: Don't use C++ keywords as argument names. [https://gerrit.asterisk.org/c/asterisk/+/18399|https://gerrit.asterisk.org/c/asterisk/+/18399] By: Friendly Automation (friendly-automation) 2022-04-25 18:35:39.939-0500 Change 18397 merged by Kevin Harwell: config.h: Don't use C++ keywords as argument names. [https://gerrit.asterisk.org/c/asterisk/+/18397|https://gerrit.asterisk.org/c/asterisk/+/18397] By: Friendly Automation (friendly-automation) 2022-04-25 18:35:50.372-0500 Change 18398 merged by Kevin Harwell: config.h: Don't use C++ keywords as argument names. [https://gerrit.asterisk.org/c/asterisk/+/18398|https://gerrit.asterisk.org/c/asterisk/+/18398] | ||