config.h: Don't use C++ keywords as argument names.

ASTERISK-30021 #close

Change-Id: I70eb59b782a4946b979942e21422746b7563029c